<resources>
    <string name="app_name">TeamWork</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_text_uzb">O\'zbek</string>
    <string name="btn_text_russ">Русский</string>
    <string name="btn_text_eng">English</string>
    <string name="online_taxi">Online Taxi</string>
    <string name="description_pros_of_app1">Enjoy the best ever taxi looking \n experience</string>
    <string name="next">next</string>
    <string name="pros_of_app2_text">Cargo Services</string>
    <string name="desc_pros_of_app_2">We also offer the best and safe cargo \n services for cheap prices</string>
    <string name="previous">Previous</string>
    <string name="skip">Skip</string>
    <string name="text_pros_of_app3">Pay in a way you want</string>
    <string name="desc_pros3">In our service you can pay by card \n or cash</string>
    <string name="text_pros4">Multiple orders in one App</string>
    <string name="desc_pros4">Using our app, you can book several cars \n for various destinations in one time</string>
    <string name="text_pros5">Several destinations</string>
    <string name="desc_pros5">Add more than one destination, or even \n book a taxi for person in other place</string>
    <string name="text_pros_of_app6">Short waiting period</string>
    <string name="desc_pros6">Do not waste your time for waiting a \n car, the longest period is 5 minutes</string>
    <string name="text_get_started">Get Started</string>
    <string name="text_pros7">Customer Support</string>
    <string name="desc_pros7">Our company also provide you a \n 24/7 customer</string>
    <string name="login_to_system">Login to system</string>
    <string name="telephone_number">Telephone number</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="enter_the_code_you_get_by_sms">Enter the code you get by SMS</string>
    <string name="enter_the_code">Enter the code</string>
    <string name="_00_00">00:00</string>
    <string name="enter_your_first_and_last_name">Enter your first and last name</string>
    <string name="first_name">First name</string>
    <string name="second_name">Second name</string>
    <string name="enter_your_email_and_password">Enter your email and password</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="short_waiting_period">Short waiting period</string>
    <string name="several_destinations">Several destinations</string>
    <string name="customer_support">Customer Support</string>
    <string name="pros_of_app1_text">Online Taxi</string>
    <string name="_998">+998</string>
    <string name="sms_orqali_qabul_qilingan_kodni_kiriting">SMS orqali qabul qilingan kodni kiriting</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter password</string>
    <string name="muhammad_mamasoliyev">Muhammad Mamasoliyev</string>
    <string name="faol_holatda">Faol holatda</string>
    <string name="_200_000">200 000</string>
    <string name="balans">Balans</string>
    <string name="_89">89</string>
    <string name="bonus">Bonus</string>
    <string name="shaharlararo_taksi_rejimi">Shaharlararo taksi rejimi</string>
    <string name="liniyaga_chiqish">Liniyaga chiqish</string>
    <string name="new_code">Send new code</string>
    <string name="send_new_code">Send new code</string>
    <string name="toliq_nomer">To\'liq nomer*</string>
    <string name="tashkent">Tashkent</string>
    <string name="fergana">Fergana</string>
    <string name="asosiy">Asosiy</string>
    <string name="buyurtmalar">Buyurtmalar</string>
    <string name="profil">Profil</string>
    <string name="yo_nalishni_tanlang">Yo\'nalishni tanlang</string>
    <string name="farg_ona">Farg\'ona</string>
    <string name="toshkent">Toshkent</string>
    <string name="vaqt_oralig_ini_tanlang">Vaqt oralig\'ini tanlang</string>
    <string name="_1_7">1/7</string>
    <string name="_2_7">2/7</string>
    <string name="_3_7">3/7</string>
    <string name="_4_7">4/7</string>
    <string name="_5_7">5/7</string>
    <string name="_6_7">6/7</string>
    <string name="_7_7">7/7</string>
    <string name="yo_nalishda">Yo\'nalishda</string>
    <string name="yo_lovchilar">Yo\'lovchilar</string>
    <string name="bo_sh">Bo\'sh</string>
    <string name="_1">#1</string>
    <string name="uch_nuqta">...</string>
    <string name="_2">#2</string>
    <string name="_3">#3</string>
    <string name="_4">#4</string>
    <string name="tepa_bagaj">Tepa bagaj</string>
    <string name="mavjud_pochtalar">Mavjud pochtalar</string>
    <string name="yo_q">Yo\'q</string>
    <string name="yo_nalishdan_chiqish">Yo\'nalishdan chiqish</string>
    <string name="yo_lga_chiqish">Yo\'lga chiqish</string>
    <string name="yo_nalishdan_chiqasizmi">Yo\'nalishdan chiqasizmi?</string>
    <string name="yo_nalishdan_chiqish_uchun_n_biz_bilan_bog_laning">Yo’nalishdan chiqish uchun \n biz bilan bog’laning</string>
    <string name="operator">Operator</string>
    <string name="_998_90_780_06_60">+998 90 780 06 60</string>
    <string name="onlinetaxi_call_center">"@"onlinetaxi_call_center</string>
    <string name="orqaga_qaytish">Orqaga qaytish</string>
    <string name="zakazlar">Zakazlar</string>
    <string name="yo_lovchini_qo_shish">Yo\'lovchini qo\'shish</string>
    <string name="joy">Joy</string>
    <string name="narxi">Narxi</string>
    <string name="_120000_so_m">120000 so\'m</string>
    <string name="bekor_qilish">Bekor qilish</string>
    <string name="olib_tashlash">Olib tashlash</string>
    <string name="telefon_raqam">Telefon raqam</string>
    <string name="qo_shish">Qo\'shish</string>
    <string name="offlayn_band_qilingan">Offlayn band qilingan</string>
    <string name="onlayn_band_qilingan">Onlayn band qilingan</string>
    <string name="qo_qon">Qo\'qon</string>
    <string name="tariflar">Tariflar</string>
    <string name="ok">OK</string>
    <string name="_100_000_so_m">100 000 so\'m</string>
    <string name="russia">Русский</string>
    <string name="english">English</string>
    <string name="title_activity_login1">Login1Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="safety">Safety</string>
    <string name="trusted_contacts">Trusted Contacts</string>
    <string name="emergency_situation">Emergency situation</string>
    <string name="_112_ambulance_and_police">112: ambulance and police</string>
</resources>