<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="316dp"
    android:layout_height="304dp"
    tools:context=".presentation.taxi_info_fragments.DialogOrderDetailsFragment">

    <TextView
        android:id="@+id/dialog_text_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:text="@string/yo_nalishdan_chiqasizmi"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_exit"
        app:layout_constraintBottom_toTopOf="@id/dialog_text_exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/yo_nalishdan_chiqish_uchun_n_biz_bilan_bog_laning"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_text_exit" />

    <ImageView
        android:id="@+id/img_phone"
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        android:src="@drawable/ic_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_desc" />

    <TextView
        android:id="@+id/text_operator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/operator"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/img_phone"
        app:layout_constraintTop_toTopOf="@id/img_phone" />

    <TextView
        android:id="@+id/text_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_998_90_780_06_60"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/text_operator"
        app:layout_constraintTop_toBottomOf="@id/text_operator" />

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/call_img"
        app:layout_constraintBottom_toBottomOf="@id/img_phone"
        app:layout_constraintEnd_toEndOf="@id/img_exit"
        app:layout_constraintTop_toTopOf="@id/img_phone" />

    <ImageView
        android:id="@+id/img_telegram"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="177dp"
        android:src="@drawable/tg_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_telegram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="173dp"
        android:text="@string/operator"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/img_telegram"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_reference_tg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="194dp"
        android:text="@string/onlinetaxi_call_center"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/text_telegram"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btn_orqaga_qaytish"
        android:layout_width="284dp"
        android:layout_height="55dp"
        android:layout_marginTop="232dp"
        android:backgroundTint="@color/gray"
        android:text="@string/orqaga_qaytish"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/img_exit"
        app:layout_constraintStart_toStartOf="@id/img_phone"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>